# release

./: CMakeLists.txt  readme.md  readme.txt
glade/: kuikjulia.glade  pallet_Essentials.glade  pallet_Filesystem.glade  pallet_master.glade  pallet_operation.glade  pallet_quick.glade  pallet_read_data.glade  pallet_test.glade  pallet_write_data.glade  script_editor.glade  vte_window.glade
include/: CMakeLists.txt  UserInterfaceFile.h.in  defines.h  headers.h  kuikjulia_window.h  pallet_defines.h.in  pallet_structures.c  pallet_structures.h  script_editor_window_structures.c  script_editor_window_structures.h  vte_window_structures.c  vte_window_structures.h
lib/: CMakeLists.txt  pallet_create.c
lib/Essentials/: CMakeLists.txt  pallet_Essentials.c  pallet_Essentials_function01.c
lib/Filesystem/: CMakeLists.txt  pallet_Filesystem.c  pallet_Filesystem_function01.c  pallet_Filesystem_function02.c  pallet_Filesystem_function03.c  pallet_Filesystem_function04.c  pallet_Filesystem_function05.c  pallet_Filesystem_function06.c  pallet_Filesystem_function07.c  pallet_Filesystem_function08.c  pallet_Filesystem_function09.c  pallet_Filesystem_function10.c
lib/master/: CMakeLists.txt  pallet_master_function01.c
lib/operation/: CMakeLists.txt  pallet_operation.c  pallet_operation_function01.c  pallet_operation_function02.c  pallet_operation_function03.c  pallet_operation_function04.c  pallet_operation_function05.c  pallet_operation_function06.c  pallet_operation_function07.c  pallet_operation_function08.c  pallet_operation_function09.c  pallet_operation_function10.c
lib/parallel/: CMakeLists.txt  pallet_master_function01.c
lib/quick/: CMakeLists.txt  pallet_quick_function01.c
lib/read_data/: CMakeLists.txt  pallet_read_data.c  pallet_read_data_function01.c  pallet_read_data_function02.c  pallet_read_data_function03.c  pallet_read_data_function04.c  pallet_read_data_function05.c  pallet_read_data_function06.c  pallet_read_data_function07.c  pallet_read_data_function08.c  pallet_read_data_function09.c  pallet_read_data_function10.c
lib/test/: CMakeLists.txt  pallet_test.c
lib/write_data/: CMakeLists.txt  pallet_write_data.c  pallet_write_data_function01.c  pallet_write_data_function02.c  pallet_write_data_function03.c  pallet_write_data_function04.c  pallet_write_data_function05.c  pallet_write_data_function06.c  pallet_write_data_function07.c  pallet_write_data_function08.c  pallet_write_data_function09.c  pallet_write_data_function10.c
src/: CMakeLists.txt  aboutDialog.c  kuikjulia.c  kuikjulia_func.c  main.c
src/editor/: script_editor.c  script_editor_file_open.c  script_editor_file_save.c  script_editor_send.c  script_editor_undo-redo.c
src/vte/: vte_enviroment.c  vte_window.c
