#cmake 必要バージョン
#cmake_minimum_required(VERSION 2.6.4)
#####共有ライブラリの作成
#project(kuikjulia)

#ファイル所在の設定 
SET(PROJECT_LIBRARY_SUBDIR0 ${PROJECT_LIBRARY_DIR}/test)
SET(PROJECT_LIBRARY_SUBDIR1 ${PROJECT_LIBRARY_DIR}/quick)
SET(PROJECT_LIBRARY_SUBDIR2 ${PROJECT_LIBRARY_DIR}/Essentials)
SET(PROJECT_LIBRARY_SUBDIR3 ${PROJECT_LIBRARY_DIR}/Filesystem)
SET(PROJECT_LIBRARY_SUBDIR4 ${PROJECT_LIBRARY_DIR}/read_data)
SET(PROJECT_LIBRARY_SUBDIR5 ${PROJECT_LIBRARY_DIR}/write_data)
SET(PROJECT_LIBRARY_SUBDIR6 ${PROJECT_LIBRARY_DIR}/parallel)

#　サブディレクトリ(各，サブディレクトリにもCMakeLists.txtを置く)
ADD_SUBDIRECTORY(${PROJECT_LIBRARY_SUBDIR0})
ADD_SUBDIRECTORY(${PROJECT_LIBRARY_SUBDIR1})
ADD_SUBDIRECTORY(${PROJECT_LIBRARY_SUBDIR2})
ADD_SUBDIRECTORY(${PROJECT_LIBRARY_SUBDIR3})
ADD_SUBDIRECTORY(${PROJECT_LIBRARY_SUBDIR4})
ADD_SUBDIRECTORY(${PROJECT_LIBRARY_SUBDIR5})
ADD_SUBDIRECTORY(${PROJECT_LIBRARY_SUBDIR6})

###### EXECUTABLE&SORCE_DEFINE #####
## 元となるソースSET
#SET(PALLET ${PROJECT_LIBRARY_DIR}/pallet_create.c)
